[package]
name = "marcher"  # m(ulti) arch(itech) (test)er
version = "0.2.9"
authors = ["sjbeskur <sam.beskur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ctrlc = { version = "3.1.7", features = ["termination"] }